--- a/css/main.css
+++ b/css/main.css
@@ -230,3 +230,17 @@ button[name="CTA-button"] {
   border-radius: 5px;
   transition-duration: .3s;
 }
+
+.skip-to-content-link {
+  background: var(--NS-Wit);
+  height: 30px;
+  left: 50%;
+  padding: 8px;
+  position: absolute;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+}
+
+.skip-to-content-link:focus {
+  transform: translateY(0%);
+}
