--- a/css/main.css
+++ b/css/main.css
@@ -92,13 +92,21 @@ header ul li {
   border-radius: 5px;
 }
 
-.travelAdvice_ValueSwap img {
- width: 32px;
- height: 32px;
+.travelAdvice_ValueSwap button {
+ width: 38px;
+ height: 38px;
  position: absolute;
  right: 1.5rem;
- margin-top: 7px;
+ margin-top: .5rem;
+ border: none;
+ background: none;
+ background-image: url(../assets/wisselom.svg);
 }
+
+.travelAdvice_ValueSwap img {
+  width: 32px;
+  height: 32px;
+ }
 
 .travelAdvice input:last-of-type {
   margin-bottom: 1rem;
