--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,12 @@
   font-family: 'NSSans';
   src: url(../fonts/NSSans.woff2) format('woff2');
 }
+
 @font-face {
   font-family: 'NSSansB';
   src: url(../fonts/NSSansBold.woff2) format('woff2');
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -17,7 +19,7 @@
   --NS-Grijs: #6a6a7a;
   --NS-Grijs-Backdrop: #e6e6e9;
   --NS-Wit: #fff;
-  --NS-Grijs-Inactive:#07072199;
+  --NS-Grijs-Inactive: #07072199;
   --NS-LichtGrijs: #f9f9f9;
   font-size: 16px;
   font-family: NSSans;
@@ -93,20 +95,20 @@ header ul li {
 }
 
 .travelAdvice_ValueSwap button {
- width: 38px;
- height: 38px;
- position: absolute;
- right: 1.5rem;
- margin-top: .5rem;
- border: none;
- background: none;
- background-image: url(../assets/wisselom.svg);
+  width: 38px;
+  height: 38px;
+  position: absolute;
+  right: 1.5rem;
+  margin-top: .5rem;
+  border: none;
+  background: none;
+  background-image: url(../assets/wisselom.svg);
 }
 
 .travelAdvice_ValueSwap img {
   width: 32px;
   height: 32px;
- }
+}
 
 .travelAdvice input:last-of-type {
   margin-bottom: 1rem;
@@ -144,7 +146,7 @@ button[name="retrieveTravelAdvice"]:hover {
 }
 
 .CTAadvert {
-  background: url(../assets/CTA1.jpeg), url(../assets/flowwit.png), rgba(0,0,0,0.4);
+  background: url(../assets/CTA1.jpeg), url(../assets/flowwit.png), rgba(0, 0, 0, 0.4);
   background-blend-mode: overlay;
   background-position: center center;
   background-size: cover;
@@ -217,7 +219,7 @@ button[name="CTAadvert-button"] {
 }
 
 .CTA {
-  background: url(../assets/conducteurs.jpg), rgba(0,0,0,0.4);
+  background: url(../assets/conducteurs.jpg), rgba(0, 0, 0, 0.4);
   background-blend-mode: overlay;
   background-position: center center;
   background-size: cover;
@@ -265,7 +267,7 @@ button[name="CTA-button"] {
 }
 
 #travelAdvice_VA input {
-display: none;
+  display: none;
 }
 
 #travelAdvice_VA {
@@ -280,12 +282,12 @@ display: none;
   margin-right: 10px;
 }
 
-.Vertrek:checked + .label_Vertrek {
+.Vertrek:checked+.label_Vertrek {
   border-bottom: 2px solid var(--NS-NorBlauw1);
   color: var(--NS-NorBlauw1);
 }
 
-.Aankomst:checked + .label_Aankomst {
+.Aankomst:checked+.label_Aankomst {
   border-bottom: 2px solid var(--NS-NorBlauw1);
   color: var(--NS-NorBlauw1);
 }
