--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,18 @@
   --NS-Wit: #fff;
   --NS-Grijs-Inactive: #07072199;
   --NS-LichtGrijs: #f9f9f9;
+  --NS-Zwart: #000000;
+  --NS-GrijsStreep: #0707211a;
   font-size: 16px;
   font-family: NSSans;
 }
 
 body {
   background-color: var(--NS-Grijs-Backdrop);
+}
+
+button {
+  cursor: pointer;
 }
 
 header {
@@ -47,12 +53,16 @@ header ul {
 }
 
 header ul li {
-  margin-left: 25px;
+  margin-left: 8px;
   text-decoration: none;
   list-style: none;
 }
 
-.worksNotification {
+header ul li img {
+  max-width: 32px;
+}
+
+main section:first-of-type {
   width: auto;
   background-color: var(--NS-LichtGrijs);
   box-shadow: inset 0 -0.0625rem 0 0 rgb(0 0 0 / 10%);
@@ -65,7 +75,7 @@ header ul li {
   color: var(--NS-NorBlauw1);
 }
 
-.worksNotification p {
+main section:first-of-type p {
   margin-left: 5px;
   width: 90%;
   display: block;
@@ -89,9 +99,10 @@ header ul li {
   margin-bottom: 0.1rem;
   border: 0;
   padding: 1rem;
-  font-family: NSSansB;
   color: var(--NS-NorBlauw1);
   border-radius: 5px;
+  font-family: NSSansB;
+  padding-left: 64px;
 }
 
 .travelAdvice_ValueSwap button {
@@ -99,10 +110,12 @@ header ul li {
   height: 38px;
   position: absolute;
   right: 1.5rem;
-  margin-top: .5rem;
+  margin-top: -2.8rem;
   border: none;
   background: none;
+  cursor: pointer;
   background-image: url(../assets/wisselom.svg);
+  transform: rotate(90deg);
 }
 
 .travelAdvice_ValueSwap img {
@@ -124,6 +137,10 @@ header ul li {
 .tA-option-active {
   color: var(--NS-NorBlauw1);
   border-bottom-color: var(--NS-NorBlauw1);
+}
+
+fieldset {
+  border: none;
 }
 
 button[name="retrieveTravelAdvice"] {
@@ -152,7 +169,7 @@ button[name="retrieveTravelAdvice"]:hover {
   background-size: cover;
   margin: -4rem 1rem 1rem 1rem;
   color: white;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .CTAadvert h2 {
@@ -195,6 +212,7 @@ button[name="CTAadvert-button"] {
   display: flex;
   flex-direction: column;
   padding: 2rem;
+  box-shadow: 0 0.125rem 0 0 rgb(7 7 33 / 15%);
 }
 
 .linkBlock h2 {
@@ -204,6 +222,10 @@ button[name="CTAadvert-button"] {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.linkBlock h2 span img {
+  margin: -25px;
 }
 
 .linkBlock ul li {
@@ -267,7 +289,12 @@ button[name="CTA-button"] {
 }
 
 #travelAdvice_VA input {
-  display: none;
+  clip-path: polygon(0 0,0 0,0 0,0 0);
+  width: 1px;
+  height: 1rem;
+  margin: 0;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 #travelAdvice_VA {
@@ -276,13 +303,18 @@ button[name="CTA-button"] {
 }
 
 .f1-VA-label {
-  border-bottom: 2px solid #0707211a;
+  border-bottom: 2px solid var(--NS-GrijsStreep);
   padding-bottom: 10px;
   color: var(--NS-Grijs-Inactive);
-  margin-right: 10px;
+  margin-right: 2px;
 }
 
 .Vertrek:checked+.label_Vertrek {
+  border-bottom: 2px solid var(--NS-NorBlauw1);
+  color: var(--NS-NorBlauw1);
+}
+
+.Vertrek:focus+.label_Vertrek {
   border-bottom: 2px solid var(--NS-NorBlauw1);
   color: var(--NS-NorBlauw1);
 }
@@ -292,6 +324,379 @@ button[name="CTA-button"] {
   color: var(--NS-NorBlauw1);
 }
 
+.Aankomst:focus+.label_Aankomst {
+  border-bottom: 2px solid var(--NS-NorBlauw1);
+  color: var(--NS-NorBlauw1);
+}
+
 .linkBlock ul li a {
-  color: --NS-IntBlauw1
+  color: var(--NS-IntBlauw1);
+  text-decoration: none;
+}
+
+/* Datumprikker styling */
+.qs-datepicker-container {
+  padding: 15px;
+  width: auto;
+  color: var(--NS-IntBlauw1);
+  border: none;
+}
+
+.qs-controls {
+  background: none;
+}
+
+.qs-controls div span {
+  font-family: NSSansB;
+}
+
+.qs-square {
+  height: calc(35vh / 6);
+  font-family: NSSansB;
+  border-radius: 100px;
+}
+
+.qs-square:hover {
+  background: none !important;
+  border: 1px solid var(--NS-Grijs-Backdrop);
+  color: var(--NS-IntBlauw1Hov);
+}
+
+.qs-day {
+  color: var(--NS-Zwart);
+  font-family: NSSans !important; /* Bij uitzondering important gebruikt vanwege opbouw HTML datepicker */
+  border-bottom: 1px solid var(--NS-Grijs-Backdrop);
+  border-radius: 0;
+}
+
+.qs-active {
+  background: var(--NS-IntBlauw1);
+  color: var(--NS-Wit);
+  text-decoration: none;
+}
+
+.qs-current::after {
+  content: "•";
+  position: absolute;
+  margin-top: 1.5rem;
+}
+
+.qs-current {
+  text-decoration: none;
+}
+
+.qs-arrow.qs-right:after {
+  border: none;
+  left: 0;
+  content: url(../assets/arrow.svg);
+}
+
+.qs-arrow.qs-left:after {
+  border: none;
+  left: 0;
+  content: url(../assets/arrow.svg);
+  transform: translate(50%,-50%) rotate(180deg);
+  margin-left: 2rem;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  background: none;
+}
+
+main > section:nth-child(2) > form > fieldset:nth-child(7) {
+font-family: NSSans;
+}
+
+main > section:nth-child(2) > form > fieldset:nth-child(7) > input {
+  background: transparent;
+  font-family: NSSans;
+  padding: .1em;
+  height: 32px;
+  width: auto;
+  color: var(--NS-NorBlauw1);
+  padding-bottom:2px;
+  border-bottom: 2px solid var(--NS-GrijsStreep);
+  border-radius: 0;
+  padding: 0 0 2px 32px;
+}
+
+main > section:nth-child(2) > form > fieldset:nth-child(7) > button {
+  background: transparent;
+  border: none;
+  padding: .1em;
+  height: 32px;
+  width: auto;
+  color: var(--NS-NorBlauw1);
+  padding-bottom:2px;
+  border-bottom: 2px solid var(--NS-GrijsStreep);
+  border-radius: 0;
+  padding: 0 0 6px 32px;
+  background: transparent url(../assets/nu.svg);
+  background-repeat: no-repeat;
+  background-size: 32px;
+  background-position: left center;
+}
+
+main > section:nth-child(2) > form > fieldset:nth-child(7) > button:hover {
+  border-color: var(--NS-NorBlauw1);
+}
+
+main > section:nth-child(2) > form > fieldset:nth-child(7) > input:first-of-type {
+  background: transparent url(../assets/cal.svg);
+  background-repeat: no-repeat;
+  background-size: 32px;
+  height: 32px;
+  width: 100px;
+  color: var(--NS-NorBlauw1);
+  border-bottom: 2px solid var(--NS-GrijsStreep);
+  border-radius: 0;
+}
+
+main > section:nth-child(2) > form > fieldset:nth-child(7) > input:nth-child(2) {
+  background: transparent url(../assets/tijd.svg);
+  background-repeat: no-repeat;
+  background-size: 32px;
+}
+
+main > section:nth-child(2) > form > fieldset:nth-child(7) > input:hover {
+  border-color: var(--NS-NorBlauw1);
+}
+
+main h2 {
+  font-size: 2em;
+  color: var(--NS-NorBlauw1);
+  margin-left: 1rem;
+}
+
+section h2 {
+  margin-left: 0;
+}
+
+.newsBlock {
+  margin: 1rem;
+  background: var(--NS-Wit);
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  box-shadow: 0 0.125rem 0 0 rgb(7 7 33 / 15%);
+  margin-bottom: 2rem;
+}
+
+.newsBlock img {
+  width: calc(100% + 4rem);
+  margin: -2em -2em 2em -2em;
+}
+
+.newsBlock h3 {
+  font-size: 1.3rem;
+  color: var(--NS-NorBlauw1);
+  margin-bottom: 1rem;
+}
+
+.newsBlock p {
+  line-height: 1.5rem;
+}
+
+.newsBlock button {
+  border: none;
+  text-align: left;
+  background: url(../assets/arrow.svg);
+  background-size: 36px;
+  padding-left: 32px;
+  background-repeat: no-repeat;
+  background-position: left center;
+  height: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  color: var(--NS-IntBlauw1);
+}
+
+.tw {
+  background: url(../assets/treinwijzer.png), rgba(0, 0, 0, 0.4);
+  background-size: cover;
+  background-position: center;
+  margin-top: 2rem;
+}
+
+main > section:nth-child(2) > form > label {
+  position: absolute;
+  margin-top: 1rem;
+  font-family: NSSansB;
+  color: var(--NS-NorBlauw1);
+  margin-left: 1rem;
+}
+
+main > section:nth-child(2) > form > label:nth-child(4) {
+  margin-top: 4.3rem;
+}
+
+main > section:nth-child(2) > button:nth-child(2) {
+  background: transparent;
+  border: none;
+  padding: .1em;
+  height: 32px;
+  width: auto;
+  color: var(--NS-NorBlauw1);
+  padding-bottom:2px;
+  border-bottom: 2px solid var(--NS-GrijsStreep);
+  border-radius: 0;
+  padding: 0 0 6px 32px;
+  background: transparent url(../assets/settings.svg);
+  background-repeat: no-repeat;
+  background-size: 32px;
+  background-position: left center;
+}
+
+main > section:nth-child(2) > button:nth-child(2):hover {
+  border-color: var(--NS-NorBlauw1);
+}
+
+#opties {
+  display: none;
+}
+
+#opties form {
+  padding-top: 1rem;
+  border-top: 1px solid var(--NS-GrijsStreep);
+  margin-top: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#via_label {
+  position: absolute;
+  margin-top: 1rem;
+  font-family: NSSansB;
+  color: var(--NS-NorBlauw1) !important;
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+#via {
+  margin-bottom: 0.1rem;
+  border: 0;
+  padding: 1rem;
+  color: var(--NS-NorBlauw1);
+  border-radius: 5px;
+  font-family: NSSansB;
+  padding-left: 64px;
+}
+
+#opties_voorkeuren {
+  display: flex;
+  flex-direction: row;
+}
+
+#opties form label {
+  width: auto;
+  color: var(--NS-Grijs-Inactive);
+}
+
+#opties form h3 {
+  font-size: 1.1rem;
+  color: var(--NS-NorBlauw1);
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-family: NSSansB;
+}
+
+input[type="checkbox"] {
+margin-right: 1rem;
+}
+
+#opties input[type="radio"] {
+  clip-path: polygon(0 0,0 0,0 0,0 0);
+    width: 1px;
+    height: 1rem;
+    margin: 0;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.overstaptijd_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.overstaptijd_container p {
+  flex-grow: 1;
+  text-align: center;
+  color: var(--NS-Grijs-Inactive);
+  border-bottom: 2px solid var(--NS-GrijsStreep);
+  padding-bottom: 8px;
+}
+
+.overstaptijd_container p:focus {
+  color: var(--NS-NorBlauw1);
+  border-color: var(--NS-NorBlauw1);
+}
+
+.overstaptijd_container label {
+  flex-grow: 1;
+  text-align: center;
+  border-bottom: 2px solid var(--NS-GrijsStreep);
+  padding-bottom: 10px;
+  color: var(--NS-Grijs-Inactive);
+  margin-right: 2px;
+}
+
+.showOptions {
+  display: block !important;
+}
+
+footer {
+  background: var(--NS-Wit);
+  display: flex;
+  flex-direction: column;
+}
+
+.linkSection {
+  padding: 2rem;
+  padding-bottom: 1rem;
+}
+
+.linkSection h2 {
+  font-size: 1rem;
+  font-family: NSSansB;
+  color: var(--NS-NorBlauw1);
+  margin-bottom: 1rem;
+}
+
+.linkSection ul li {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  color: var(--NS-IntBlauw1);
+}
+
+.linkSection ul li::before {
+  content: url(../assets/arrow.svg);
+  height: 32px;
+}
+
+.linkSection ul li a {
+  color: var(--NS-IntBlauw1);
+  text-decoration: none;
+}
+
+.linkSection:last-of-type {
+  border-top: 1px solid var(--NS-Grijs-Backdrop);
+  padding: 2rem 0 0 0;
+  margin: 2rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+}
+
+.linkSection img {
+  padding-top: .5rem;
+}
+
+.linkSection:last-of-type ul li a{
+  color: var(--NS-Grijs);
 }
