--- a/css/main.css
+++ b/css/main.css
@@ -691,6 +691,7 @@ footer {
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: flex-start;
+  justify-content: space-between;
 }
 
 .linkSection img {
