--- a/css/main.css
+++ b/css/main.css
@@ -84,43 +84,13 @@ main section:first-of-type p {
   text-overflow: ellipsis;
 }
 
+form legend {
+  display: none;
+}
+
 .cont-travelAdvice {
   background: var(--NS-Geel1);
   padding: 1rem;
-}
-
-.travelAdvice {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.travelAdvice input {
-  margin-bottom: 0.1rem;
-  border: 0;
-  padding: 1rem;
-  color: var(--NS-NorBlauw1);
-  border-radius: 5px;
-  font-family: NSSansB;
-  padding-left: 64px;
-}
-
-.travelAdvice_ValueSwap button {
-  width: 38px;
-  height: 38px;
-  position: absolute;
-  right: 1.5rem;
-  margin-top: -2.8rem;
-  border: none;
-  background: none;
-  cursor: pointer;
-  background-image: url(../assets/wisselom.svg);
-  transform: rotate(90deg);
-}
-
-.travelAdvice_ValueSwap img {
-  width: 32px;
-  height: 32px;
 }
 
 .travelAdvice input:last-of-type {
@@ -140,6 +110,10 @@ main section:first-of-type p {
 }
 
 fieldset {
+  border: none;
+}
+
+fieldset input {
   border: none;
 }
 
@@ -420,7 +394,7 @@ main > section:nth-child(2) > form > fieldset:nth-child(7) > input {
   padding: 0 0 2px 32px;
 }
 
-main > section:nth-child(2) > form > fieldset:nth-child(7) > button {
+#todayButton {
   background: transparent;
   border: none;
   padding: .1em;
@@ -437,28 +411,24 @@ main > section:nth-child(2) > form > fieldset:nth-child(7) > button {
   background-position: left center;
 }
 
-main > section:nth-child(2) > form > fieldset:nth-child(7) > button:hover {
-  border-color: var(--NS-NorBlauw1);
-}
-
-main > section:nth-child(2) > form > fieldset:nth-child(7) > input:first-of-type {
+#timedate input {
   background: transparent url(../assets/cal.svg);
   background-repeat: no-repeat;
   background-size: 32px;
   height: 32px;
-  width: 100px;
+  width: auto;
   color: var(--NS-NorBlauw1);
   border-bottom: 2px solid var(--NS-GrijsStreep);
   border-radius: 0;
+  padding-left: 2em;
 }
 
-main > section:nth-child(2) > form > fieldset:nth-child(7) > input:nth-child(2) {
-  background: transparent url(../assets/tijd.svg);
-  background-repeat: no-repeat;
+#tA_tijd {
+  background: transparent url(../assets/tijd.svg) no-repeat !important;
   background-size: 32px;
 }
 
-main > section:nth-child(2) > form > fieldset:nth-child(7) > input:hover {
+#timedate input:hover {
   border-color: var(--NS-NorBlauw1);
 }
 
@@ -518,19 +488,7 @@ section h2 {
   margin-top: 2rem;
 }
 
-main > section:nth-child(2) > form > label {
-  position: absolute;
-  margin-top: 1rem;
-  font-family: NSSansB;
-  color: var(--NS-NorBlauw1);
-  margin-left: 1rem;
-}
-
-main > section:nth-child(2) > form > label:nth-child(4) {
-  margin-top: 4.3rem;
-}
-
-main > section:nth-child(2) > button:nth-child(2) {
+#options {
   background: transparent;
   border: none;
   padding: .1em;
@@ -547,15 +505,11 @@ main > section:nth-child(2) > button:nth-child(2) {
   background-position: left center;
 }
 
-main > section:nth-child(2) > button:nth-child(2):hover {
-  border-color: var(--NS-NorBlauw1);
+#opties {
+  display: block;
 }
 
 #opties {
-  display: none;
-}
-
-#opties form {
   padding-top: 1rem;
   border-top: 1px solid var(--NS-GrijsStreep);
   margin-top: 1rem;
@@ -588,13 +542,13 @@ main > section:nth-child(2) > button:nth-child(2):hover {
   flex-direction: row;
 }
 
-#opties form label {
+#opties label {
   width: auto;
   color: var(--NS-Grijs-Inactive);
 }
 
-#opties form h3 {
-  font-size: 1.1rem;
+#opties h3 {
+  font-size: 1.2rem;
   color: var(--NS-NorBlauw1);
   margin-top: 2rem;
   margin-bottom: 1rem;
