Def Commit 23 jan

--- a/css/main.css
+++ b/css/main.css
@@ -426,7 +426,7 @@ main > section:nth-child(2) > form > fieldset:nth-child(7) > input {
   appearance: none;
   border: none;
   border-radius: inherit;
-  transition: padding-left .05s;
+  transition: padding-left ease-in-out .1s;
 }
 
 #stations input:placeholder-shown {
